--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port=5000",
     "build": "next build",
-    "start": "next start",
+    "start": "next start --port=5000",
     "lint": "next lint"
   },
   "dependencies": {
+    "@co-labo-hub/fetcha": "^1.0.7",
     "@heroicons/react": "^2.1.1",
     "@prisma/client": "^5.11.0",
     "@vercel/style-guide": "^6.0.0",
