--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "@co-labo-hub/fetcha": "^1.0.7",
     "@heroicons/react": "^2.1.1",
     "@prisma/client": "^5.11.0",
+    "@react-three/drei": "^9.102.6",
+    "@react-three/fiber": "^8.15.19",
+    "@types/three": "^0.162.0",
     "@vercel/style-guide": "^6.0.0",
     "clsx": "^2.1.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "three": "^0.162.0",
+    "three-mesh-ui": "^6.5.4",
     "use-debounce": "^10.0.0",
     "zod": "^3.22.4"
   },
