TODO がハイライトされるように拡張機能を追加

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,7 +32,8 @@
         "oderwat.indent-rainbow",
         "mosapride.zenkaku",
         "humao.rest-client",
-        "dbaeumer.vscode-eslint"
+        "dbaeumer.vscode-eslint",
+        "gruntfuggly.todo-tree"
       ]
     }
   }
