Floor の新規作成・切替・更新処理実装

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,11 @@
         "pattern": "Ready in \\d+\\.\\ds",
         "uriFormat": "http://localhost:5000",
         "action": "debugWithChrome"
-      }
+      },
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/**",
+        "!**/node_modules/**"
+      ]
     }
   ]
 }
