Floor の削除機能追加

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -33,7 +33,8 @@
         "mosapride.zenkaku",
         "humao.rest-client",
         "dbaeumer.vscode-eslint",
-        "gruntfuggly.todo-tree"
+        "gruntfuggly.todo-tree",
+        "bradlc.vscode-tailwindcss"
       ]
     }
   }
